# fgwas

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
man/: fgwas_manual.tex  genres.bst  genres.sty
src/: Chromosome.cpp  Chromosome.h  CmdLine.cpp  CmdLine.h  Makefile  Makefile.am  Makefile.in  SNP.cpp  SNP.h  SNPs.cpp  SNPs.h  fgwas  fgwas.cpp  fgwas_params.cpp  fgwas_params.h  test.cpp
src/.deps/: CmdLine.Po  SNP.Po  SNPs.Po  fgwas.Po  fgwas_params.Po  gzstream.Po
